package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"

	"github.com/yourusername/web3-wallet-backend/pkg/config"
	"github.com/yourusername/web3-wallet-backend/pkg/logger"
	"google.golang.org/grpc"
)

func main() {
	// Load configuration
	cfg, err := config.LoadConfig("config/config.yaml")
	if err != nil {
		log.Fatalf("Failed to load configuration: %v", err)
	}

	// Initialize logger
	l := logger.NewLogger(cfg.Logging)
	l.Info("Starting Security Service")

	// Create a listener on TCP port
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", 50054)) // Use a different port for gRPC
	if err != nil {
		l.Fatal(fmt.Sprintf("Failed to listen: %v", err))
	}

	// Create a gRPC server object
	grpcServer := grpc.NewServer()

	// Register services
	// TODO: Register security service implementation
	// pb.RegisterSecurityServiceServer(grpcServer, &securityService{})

	// Start gRPC server in a goroutine
	go func() {
		l.Info("Security Service listening on port 50054")
		if err := grpcServer.Serve(lis); err != nil {
			l.Fatal(fmt.Sprintf("Failed to serve: %v", err))
		}
	}()

	// Wait for interrupt signal to gracefully shutdown the server
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	l.Info("Shutting down Security Service...")

	// Gracefully stop the gRPC server
	grpcServer.GracefulStop()
	l.Info("Security Service stopped")
}

// securityService implements the SecurityService gRPC service
type securityService struct {
	// TODO: Add dependencies like database, encryption service, etc.
	// pb.UnimplementedSecurityServiceServer
}

// GenerateKeyPair generates a new key pair
func (s *securityService) GenerateKeyPair(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement key pair generation
	return nil, nil
}

// EncryptPrivateKey encrypts a private key
func (s *securityService) EncryptPrivateKey(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement private key encryption
	return nil, nil
}

// DecryptPrivateKey decrypts a private key
func (s *securityService) DecryptPrivateKey(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement private key decryption
	return nil, nil
}

// GenerateJWT generates a JWT token
func (s *securityService) GenerateJWT(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement JWT generation
	return nil, nil
}

// VerifyJWT verifies a JWT token
func (s *securityService) VerifyJWT(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement JWT verification
	return nil, nil
}

// GenerateMnemonic generates a mnemonic phrase
func (s *securityService) GenerateMnemonic(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement mnemonic generation
	return nil, nil
}

// ValidateMnemonic validates a mnemonic phrase
func (s *securityService) ValidateMnemonic(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement mnemonic validation
	return nil, nil
}
